--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <a href=""><button class='scr-btn'>Work Permit</button></a>
     <a href=""><button class='scr-btn'>Live</button></a>
     <a href=""><button class='scr-btn'>Job Interviews</button></a>
-    <a href=""><button class='scr-btn'>Recently Uploaded</button></a>
+    <a href=""><button class='scr-btn'>Recenty Upload</button></a>
     <a href=""><button class='scr-btn'>News</button></a>
     <a href=""><button class='scr-btn'>Music</button></a>
     <a href=""><button class='scr-btn'>Comedy</button></a>
