--- a/index.html
+++ b/index.html
@@ -212,7 +212,11 @@
     <a href=""><button class='scr-btn'>News</button></a>
     <a href=""><button class='scr-btn'>Music</button></a>
     <a href=""><button class='scr-btn'>Comedy</button></a>
-    <!-- <a href=""><button class='scr-btn'>Podcast</button></a> -->
+    <a href=""><button class='scr-btn'>Podcast</button></a>
+
+    <a href=""><button class='scr-btn'>Music</button></a>
+    <a href=""><button class='scr-btn'>Comedy</button></a>
+    <a href=""><button class='scr-btn'>Podcast</button></a>
     </div>
 
 
