--- a/index.html
+++ b/index.html
@@ -244,28 +244,30 @@
 
 
     <!-- body -->
-    <div class="body">
+    <div class="body-card">
         <div class="bound">
-            <div class="content-t">
-
-                <img src="Images/image.jpg" alt="img" class="main-img"/>
-                <div class="info">
-                    <img src="Images/image.jpg" alt="img" class="profile"/>
-                    <div class="info-2">
-                        <div class="title-line">
-                        <h3 class="title">How I got my canada PR</h3>
-                        
+                <div class="content-t">
+                    <div class="main-card">
+                    <img src="Images/image.jpg" alt="img" class="main-img"/>
+                    <div class="info">
+                        <img src="Images/image.jpg" alt="img" class="profile"/>
+                        <div class="info-2">
+                            <div class="title-line">
+                            <h3 class="title">How I got my canada PR</h3>
+                            </div>
+                            <div class="description">
+                            <h5 class="name">Indo Canadian</h5>
+                            <h5 class="views">65K views . 1year ago</h5>
+                            </div>
                         </div>
-                        <h5 class="name">Indo Canadian</h5>
-                        <h5 class="views">65K views . 1year ago</h5>
+                        <div class="lines">
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                            <div class="circle"></div>
+                        </div>
                     </div>
-                    <div class="lines">
-                        <div class="circle"></div>
-                        <div class="circle"></div>
-                        <div class="circle"></div>
                     </div>
                 </div>
-            </div>
 
             <div class="content-t">
                 <img src="Images/codeblog.jpg" alt="img" class="main-img"/>
