--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="search-com">
+        <div class="">
             <div class="searchy">
                 <!-- <div class="searchy1"> -->
             <i class="fa fa-search search1" aria-hidden="true"></i>
@@ -244,7 +244,7 @@
 
 
     <!-- body -->
-    <div class="body-card">
+    <div class="card">
         <div class="bound">
                 <div class="content-t">
                     <div class="main-card">
@@ -260,6 +260,7 @@
                             <h5 class="views">65K views . 1year ago</h5>
                             </div>
                         </div>
+
                         <div class="lines">
                             <div class="circle"></div>
                             <div class="circle"></div>
