--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="">
+        <div class="search-com">
             <div class="searchy">
                 <!-- <div class="searchy1"> -->
             <i class="fa fa-search search1" aria-hidden="true"></i>
