--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
             </div>
             <div class="shorts">
-                <img src="Images/shorts.jpg" alt="shorts" class="Yshort"/>
+                <img src="Images/short.png" alt="shorts" class="Yshort"/>
                 <h4 class="short-title">Shorts</h4>
             </div>
 
