--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                     <h5 class="icon-title">Home</h5>
                 </div>
                 <div class="iconss">
-                    <i class="fa fa-home icony" aria-hidden="true"></i>
+                    <span class="material-symbols-outlined">
+                        photo_camera
+                        </span>
                     <h5 class="icon-title">Shorts</h5>
                 </div>
                 <div class="iconss">
